--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -9,9 +9,71 @@
 
 // Active Admin's got SASS!
 @import "active_admin/mixins";
-@import "active_admin/base";
+@import "arctic_admin/base";
 
 // Overriding any non-variable Sass must be done after the fact.
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+.header #utility_nav {
+    background-color:   #B0E0E6; 
+}
+
+.header .site_title{
+background-color: #808080;
+color: #fff;
+}
+
+.header #utility_nav #current_user a:before,
+.header #utility_nav #logout a:before {
+  color: #fff;
+  transition: color 0.3s ease; 
+}
+
+.header #utility_nav #current_user a:hover:before,
+.header #utility_nav #logout a:hover:before {
+  color: #446677;
+  background-color: #000;
+}
+
+body {
+  background-color:#D3D3D3
+
+}
+
+.header #tabs li {
+  font-size: 19px;
+}
+
+.header #tabs {
+  background-color: #000;
+} 
+
+.header #tabs {
+  background-color:  #B0E0E6;
+}
+
+.header #tabs li.current a {
+  color: #7dc5a0; /* Text color for the current tab */
+  background-color: #808080; /* Background color for the current tab */
+  border-radius: 5px; /* Add rounded corners to create a box-like appearance */
+  padding: 4px 8px; /* Adjust padding for better visual balance */
+}
+
+.header #tabs li a {
+  color: #fff;
+  padding: 4px 8px;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.header #tabs li a:hover {
+  color: #446677; 
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.flash_notice {
+  background-color: #68be46;
+  color: #fff;
+}
